--- a/assets/css/_archive.scss
+++ b/assets/css/_archive.scss
@@ -268,6 +268,30 @@
 					justify-content: right;
 				}
 			}
+
+			&.fair {
+				border-top: 4px solid #4caf50;
+
+				&:hover {
+					border-color: #4caf50;
+					border-top: 4px solid #388e3c;
+				}
+
+				.fair-badge {
+					text-align: right;
+
+					p {
+						background: #4caf50;
+						color: white;
+						padding: 2px 10px;
+						font-size: 10px;
+						font-weight: 600;
+						white-space: nowrap;
+						margin: 0 -15px -10px 0;
+						letter-spacing: 1px;
+					}
+				}
+			}
 		}
 	}
 
