--- a/assets/css/_single.scss
+++ b/assets/css/_single.scss
@@ -71,6 +71,18 @@
                 font-size: 18px;
                 line-height: 20px;
             }
+
+            .plugin-fair {
+                background: #4caf50;
+                color: white;
+                padding: 2px 10px;
+                font-size: 10px;
+                font-weight: 600;
+                white-space: nowrap;
+                margin: 0 -15px -10px 0;
+                letter-spacing: 1px;
+				display: inline-block;
+            }
         }
 
         .entry-preview,
@@ -170,9 +182,9 @@
                         background: #e0e0e0;
                     }
 
-					&:focus {
-						background: #e0e0e0;
-					}
+                    &:focus {
+                        background: #e0e0e0;
+                    }
                 }
 
                 .details-content {
@@ -553,6 +565,14 @@
                         float: left;
                         max-width: 50%;
                         font-weight: 600;
+                    }
+
+                    code {
+                        font-family: monospace, monospace;
+                        background: #e0e0e0;
+                        padding: 2px 4px;
+                        border-radius: 3px;
+                        font-size: 0.95em;
                     }
                 }
             }
