Switch `sidebar` to `aside` and add context labels. (#67)
* Switch `sidebar` to `aside` and add context labels.

Fixes #66

* CSS Declarations Update

CSS Declarations Updated from sidebar to aside

---------

Co-authored-by: Namith Jawahar <48271037+namithj@users.noreply.github.com>

--- a/assets/css/_single.scss
+++ b/assets/css/_single.scss
@@ -534,7 +534,7 @@
             }
         }
 
-        sidebar {
+        aside {
             flex: 0 0 410px;
             max-width: 100%;
 
@@ -707,7 +707,7 @@
                 width: 100%;
             }
 
-            sidebar {
+            aside {
                 flex: 1;
                 max-width: 100%;
                 width: 100%;
@@ -753,7 +753,7 @@
                 margin: 0 0 12px;
             }
 
-            sidebar {
+            aside {
                 ul li {
                     padding: 5px;
                     font-size: 0.96em;
