Add user-select: all to code block for DIDs
Add user-select: all to code block for DIDs

--- a/assets/css/aspire-explorer.css
+++ b/assets/css/aspire-explorer.css
@@ -1641,6 +1641,7 @@
   padding: 2px 4px;
   border-radius: 3px;
   font-size: 0.95em;
+  user-select: all;
 }
 .single-plugin-card .entry-main aside .ratings,
 .single-theme-card .entry-main aside .ratings {
