--- a/assets/css/_single.scss
+++ b/assets/css/_single.scss
@@ -573,6 +573,7 @@
                         padding: 2px 4px;
                         border-radius: 3px;
                         font-size: 0.95em;
+						user-select: all
                     }
                 }
             }
